@@ -8,6 +8,7 @@ import org.keycloak.representations.adapters.config.PolicyEnforcerConfig;
 import org.keycloak.util.JsonSerialization;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
@@ -29,13 +30,25 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http.csrf(t->t.disable());
-        http.oauth2ResourceServer(t -> t.jwt(Customizer.withDefaults()));
-        http.addFilterAfter(createPolicyEnforcerFilter(), BearerTokenAuthenticationFilter.class);
+        http
+                .cors(Customizer.withDefaults()) // ✅ Enable CORS explicitly
+                .csrf(csrf -> csrf.disable()) // Disable CSRF for testing
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        .requestMatchers("/REST/product/{product-id}").permitAll()
+                        .requestMatchers("/REST/product/review/all/{product-id}").permitAll()
+                        .requestMatchers("/REST/product/search/{keyword}").permitAll()
+                        .requestMatchers("/REST/user/new").permitAll()
+                        .requestMatchers("/REST/product/store").permitAll()
+                        .requestMatchers("/REST/product/category").permitAll()
+                        .anyRequest().authenticated())
+                .oauth2ResourceServer(t -> t.jwt(Customizer.withDefaults()))
+                .addFilterAfter(createPolicyEnforcerFilter(), BearerTokenAuthenticationFilter.class)
+                .sessionManagement(t -> t.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
 
-        http.sessionManagement(t -> t.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
         return http.build();
     }
+
 
     private ServletPolicyEnforcerFilter createPolicyEnforcerFilter() {
         return new ServletPolicyEnforcerFilter(new ConfigurationResolver() {
@@ -54,8 +67,8 @@ public class SecurityConfig {
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowedOrigins(List.of("*"));
-        config.setAllowedMethods(Arrays.asList("*"));
-        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setAllowedMethods(List.of("*"));
+        config.setAllowedHeaders(List.of("*"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
 
